--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsOUy2nf6WCHgyyfI17ihZxaBY5H0tQQE&libraries=places"></script>
 </html>
